# SAS2Pyspark

./: .env.example  .gitignore  DESIGN_SAS2Python_v2.md  DESIGN_SAS2Python_v2.pptx  README.md  RUNNING.md  SAS2Python_Architecture.pptx  build_arch_deck.js  build_deck.js  pyproject.toml
examples/: example.sas  macro_program.sas  score_macro.sas
examples/complex_demo/: risk_pipeline.sas
examples/project/: 01_load.sas  02_price.sas  03_summary.sas
src/sas2spark/: __init__.py  cli.py  config.py  models.py
src/sas2spark/evaluation/: __init__.py  base.py  compare.py  dataframe_evals.py  gauntlet.py  judge_eval.py  spark_compare.py  spark_runtime.py  static_eval.py
src/sas2spark/flatten/: __init__.py  macro_context.py  macro_flattener.py
src/sas2spark/golden/: __init__.py  reader.py
src/sas2spark/graph/: __init__.py  depgraph.py
src/sas2spark/llm/: __init__.py  client.py  prompts.py
src/sas2spark/orchestrate/: __init__.py  cache.py  hitl.py  integrator.py  pipeline.py  project.py
src/sas2spark/parse/: __init__.py  io_extract.py  segmenter.py
src/sas2spark/repair/: __init__.py  repair.py
src/sas2spark/translate/: __init__.py  translator.py
tests/: golden_fixtures.py  test_cache_and_parallel.py  test_dataframe_evals.py  test_depgraph.py  test_fallback.py  test_io_extract.py  test_macro_context.py  test_macro_flattener.py  test_pipeline_stub.py  test_project.py  test_prompts.py  test_segmenter.py  test_spark_compare.py  test_spark_gauntlet.py  test_static_eval.py
